--- a/frontend/html/jade/index.jade
+++ b/frontend/html/jade/index.jade
@@ -23,7 +23,7 @@ html(lang='es')
             +row()
             +row()
 
-        if (jQuery === true)
+        if (configTask.js === 'jquery')
             script(src='js/vendor/jquery-2.2.0.min.js')
 
         script(src='js/main.js')
