--- a/frontend/css/code/stylus/main.styl
+++ b/frontend/css/code/stylus/main.styl
@@ -7,11 +7,14 @@ body
     -webkit-user-select none
 
     .table
+        display table
         margin auto
         text-align center
         width 300px
 
         .row
+            display table-row
+
             .square
                 border 1px solid #000
                 cursor pointer
@@ -21,8 +24,8 @@ body
                 width 100px
 
                 img
-                    max-height 200px
-                    max-width 200px
+                    max-height 100px
+                    max-width 100px
 
                     &.hidden
                         visibility hidden
