--- a/frontend/html/jade/index.jade
+++ b/frontend/html/jade/index.jade
@@ -1,5 +1,9 @@
 if (configTask.js === 'angularjs')
     include angularjs/_index
+
+else if (configTask.js === 'polymer')
+    include polymer/_index
+
 else
     include default/_index
 
