--- a/frontend/css/code/stylus/main.styl
+++ b/frontend/css/code/stylus/main.styl
@@ -15,6 +15,9 @@ body
         .row
             display table-row
 
+            mttt-square
+                display table-cell
+
             .square
                 border 1px solid #000
                 cursor pointer
